# SentinelAI

./: .env.example  .gitignore  Install-SentinelStack.ps1  Migrate-Structure.ps1  README.md  buf.gen.yaml  buf.yaml  docker-compose.yml  install-stack.sh  register.json  test_all.py  test_auth.py  test_auth_full.py  test_register.py  test_uuid.py  write_api.py  write_dashboard.py  write_layout_fix.py  write_panel.py
.github/: dependabot.yml
.github/workflows/: agent-build.yml  backend-ci.yml  desktop-build.yml  microservices-ci.yml  panel-ci.yml
agent/: Cargo.toml  agent.toml  start_agent.cmd
agent/src/: config.rs  detection.rs  executor.rs  firewall.rs  main.rs  transport.rs  wfp.rs
agent/src/collector/: filesystem.rs  mod.rs  network.rs  process.rs  system_info.rs
backend/: .dockerignore  alembic.ini  debug_check.py  fix_network.py  fix_process.py  pyproject.toml  reset_admin.py
backend/alembic/: env.py
backend/alembic/versions/: 2026_03_01_0000-0001_initial_schema.py  2026_06_15_0000-0002_phase1_firewall_rbac.py  2026_06_16_0000-0003_firewall_advanced_filters.py
backend/app/: __init__.py  main.py
backend/app/api/: dependencies.py
backend/app/api/routes/: agents.py  alerts.py  analysis.py  approvals.py  auth.py  dashboard.py  firewall.py  osint.py  remediation.py
backend/app/core/: Attached HTML and CSS Context.txt  __init__.py  config.py  database.py  security.py
backend/app/models/: __init__.py  agent.py  alert.py  approval.py  event.py  firewall.py  remediation.py  user.py
backend/app/schemas/: agent.py  alert.py  approval.py  auth.py  event.py  firewall.py
backend/app/services/: __init__.py  correlation_engine.py  detection_pipeline.py  email_service.py  firewall_service.py  llm_engine.py  lolglobs_service.py  mitre_attack.py  osint_tools.py  rule_engine.py  threat_analyzer.py  vuln_database.py
backend/scripts/: check_agents.py  cleanup_duplicate_agents.py  quick_check.py  test_agents.py  verify_auth_local.py
deploy/: README.md  agent.toml.template  install_agent.sh  sentinel-agent.service
deploy/windows/: Install-SentinelAgent.ps1  README.md  Uninstall-SentinelAgent.ps1  agent.toml
desktop/: package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: lib.rs  main.rs
docker/: Dockerfile.backend  Dockerfile.detection  Dockerfile.enrichment  Dockerfile.enrollment  Dockerfile.ingestion  Dockerfile.panel
docs/: architecture.md
docs/architecture/: 00-ARCHITECTURE-REDESIGN.md  05-THREAT-MODEL.md
docs/architecture/agent_v2/: Cargo.toml
docs/architecture/agent_v2/src/: main.rs
docs/architecture/agent_v2/src/collector/: mod.rs
docs/architecture/agent_v2/src/event_pipeline/: mod.rs
docs/architecture/agent_v2/src/local_detection/: mod.rs
docs/architecture/agent_v2/src/platform/: mod.rs
docs/architecture/agent_v2/src/self_protection/: mod.rs
docs/architecture/agent_v2/src/transport/: mod.rs
docs/architecture/deployment/: docker-compose.yml
docs/architecture/deployment/config/elasticsearch/ilm/: sentinel-telemetry-ilm.json
docs/architecture/deployment/config/elasticsearch/index-templates/: sentinel-alerts-template.json  sentinel-telemetry-template.json
docs/architecture/deployment/config/nats/: nats.conf  streams.yaml
docs/architecture/proto/: sentinel_v2.proto
docs/architecture/services/detection-engine/src/: main.rs
docs/architecture/services/enrichment-service/: main.py
docs/architecture/services/enrollment-service/: main.py
docs/architecture/services/ingestion-gateway/src/: main.rs
panel/: generate_theme.py  next.config.mjs  package-lock.json  package.json  start_dev.cmd  tailwind.config.ts  tsconfig.tsbuildinfo
panel/public/: manifest.json
panel/src/app/: globals.css  layout.tsx  page.tsx
panel/src/app/(authenticated)/: layout.tsx
panel/src/app/(authenticated)/agents/: page.tsx
panel/src/app/(authenticated)/alerts/: page.tsx
panel/src/app/(authenticated)/analysis/: page.tsx
panel/src/app/(authenticated)/approvals/: page.tsx
panel/src/app/(authenticated)/dashboard/: page.tsx
panel/src/app/(authenticated)/files/: page.tsx
panel/src/app/(authenticated)/firewall/: page.tsx
panel/src/app/(authenticated)/settings/: page.tsx
panel/src/app/(authenticated)/settings/security/: page.tsx
panel/src/app/(authenticated)/terminal/: page.tsx
panel/src/app/forgot-password/: page.tsx
panel/src/app/login/: page.tsx
panel/src/components/dashboard/: agent-status.tsx  stats-overview.tsx  threat-feed.tsx
panel/src/components/ui/: auth-shell.tsx  brand-mark.tsx  console.tsx  platform-icon.tsx  sidebar.tsx
panel/src/lib/: Attached HTML and CSS Context.txt  api.ts  auth-context.tsx  terminal-store.ts  use-websocket.ts  utils.ts
shared/proto/: sentinel.proto
